--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.18.2
+numpy
 torch==1.4.0
 tensorboardX==2.0
 scikit_image==0.16.2
@@ -6,6 +6,6 @@ matplotlib==2.2.3
 tqdm==4.43.0
 easydict==1.9
 Pillow==7.1.2
-skimage
+#skimage
 opencv_python
 pycocotools
